--- a/README.Rmd
+++ b/README.Rmd
@@ -19,20 +19,18 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-The `hLDA` package is a wrapper around the `HLDA` class/functions of the 
-`tomotopy` `python` library. It allows to fit hierarchical topic models
-(hierarchical Latent Dirichlet Allocation) on matrix of count data where each
-row is a sample (e.g. a document) and each column is a feature (e.g. a word). 
+The `hLDA` `R` package is a wrapper around the `HLDA` class/functions of the 
+[`tomotopy`](https://bab2min.github.io/tomotopy/v0.12.2/en/) `python` library. It allows to fit hierarchical topic models (hierarchical Latent Dirichlet Allocation or hLDA) on matrix of count data where each row is a sample (e.g. a document) and each column is a feature (e.g. a word). 
 Element `(i,j)` of the count matrix provides the number of time a given 
 feature `j` was found in document `i`.
 
 
 ## Installation
 
-You can install the development version of hLDA like so:
+You can install the development version of hLDA with:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+devtools::install_github("lasy/hLDA")
 ```
 
 ## Example
